# prbot-py

./: .dockerignore  .env.dist  .gitignore  Dockerfile  Justfile  README.md  manage.py  pyproject.toml  shell.nix
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: changelog.yml  ci.yml
docker/: entrypoint.sh
docs/: architecture.md  sequences.md  setup_github_app.md
prbot/: prelude.py  version.py
prbot/cli/: account.py  account_right.py  common.py  main.py  merge_rule.py  pull_request.py  repository.py  repository_rule.py  repository_rules.py
prbot/config/: log.py  sentry.py  settings.py
prbot/core/: message.py  models.py
prbot/core/commands/: commands.py  processor.py
prbot/core/commit_status/: builder.py  models.py  processor.py
prbot/core/step/: builder.py  models.py  processor.py
prbot/core/summary/: builder.py  processor.py
prbot/core/sync/: processor.py  sync_state.py
prbot/core/webhooks/: models.py  processor.py
prbot/injection/: __init__.py  setup.py
prbot/modules/database/: connection.py  implementations.py  import_export.py  models.py  repository.py  settings.py
prbot/modules/database/migrations/prbot/: 0_20240730130212_init.py
prbot/modules/gif/: client.py  models.py
prbot/modules/github/: client.py  core.py  crypto.py  models.py
prbot/modules/github/modules/: base.py  check_run.py  commit_status.py  issue.py  pull_request.py  reaction.py  repository.py
prbot/modules/github/webhooks/: models.py
prbot/modules/http/: client.py
prbot/modules/lock/: __init__.py
prbot/server/: authentication.py  crypto.py  main.py  middleware.py
prbot/server/routers/: crash.py  external.py  health.py  index.py  webhook.py
prbot/utils/: crypto.py
tests/: conftest.py
tests/core/: test_command_parser.py  test_command_processor.py  test_commit_status.py  test_event_processor.py  test_step_processor.py  test_summary_builder.py  test_summary_processor.py  test_sync_processor.py  test_sync_state.py
tests/database/: test_import_export.py
tests/github/: test_client.py  test_github_types.py
tests/server/: test_app.py
tests/utils/: expect.py  github.py  http.py  lock.py  sync_state.py
tests/utils/webhooks/: webhooks.py
